[package]
name = "yew-mermaid"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Render math with KaTeX in Yew!"
repository = "https://github.com/GalAster/yew-mermaid.js"
readme = "../../Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
yew = "0.17"
mermaid-wasmbind = {version = "0.1", path = "../wasmbind-mermaid" }

[dev-dependencies]


[features]
default = []
